deploy: 73317b45edef6c530796593b7dc97313069e56db

--- a/index.html
+++ b/index.html
@@ -547,9 +547,9 @@
 <ul>
 <li>List item 1</li>
 <li>List item 2
-name | description
------|------------
-Tyler|Whipple</li>
+|name | description|
+|-----|------------|
+|Tyler|Whipple|</li>
 </ul>
 <h3 id="subheading">Subheading</h3>
 <ol>
