--- a/404.html
+++ b/404.html
@@ -238,7 +238,7 @@
   
     
   
-  Second Page
+  Component Selection
 
       </a>
     </li>
@@ -382,7 +382,7 @@
         
   
   <span class="md-ellipsis">
-    Second Page
+    Component Selection
   </span>
   
 
