--- a/block-diagram/index.html
+++ b/block-diagram/index.html
@@ -255,7 +255,7 @@
   
     
   
-  Second Page
+  Component Selection
 
       </a>
     </li>
@@ -407,7 +407,7 @@
         
   
   <span class="md-ellipsis">
-    Second Page
+    Component Selection
   </span>
   
 
