--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
   
     
   
-  Second Page
+  Component Selection
 
       </a>
     </li>
@@ -445,7 +445,7 @@
         
   
   <span class="md-ellipsis">
-    Second Page
+    Component Selection
   </span>
   
 
