--- a/subfolder/another-subfile/index.html
+++ b/subfolder/another-subfile/index.html
@@ -251,7 +251,7 @@
   
     
   
-  Second Page
+  Component Selection
 
       </a>
     </li>
@@ -397,7 +397,7 @@
         
   
   <span class="md-ellipsis">
-    Second Page
+    Component Selection
   </span>
   
 
