deploy: f12fefa327362be69efd860dff165d37354bc654

--- a/second-page/index.html
+++ b/second-page/index.html
@@ -567,8 +567,18 @@
 <tbody>
 <tr>
 <td>AS5600-ASOM <a href="https://www.digikey.com/en/products/detail/ams-osram/AS5600-ASOM/4914332">Link</a> <br> <a class="glightbox" href="../Hall%20Effect%201.jpg" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="Hall1" src="../Hall%20Effect%201.jpg" /></a></td>
-<td><ul><li>Used in Class</li><li>Programmable angle change</li><li>Uses I2C Communication</li></ul></td>
-<td><ul><li>No available library</li></ul></td>
+<td><ul><li>Used in Class</li><li>Programmable angle change</li><li>Uses I2C Communication</li><li>3.3V Operating Voltage</li></ul></td>
+<td><ul><li>Arduino Library</li>li&gt;Cheap</li></ul></td>
+</tr>
+<tr>
+<td>MLX90316KDC <a href="https://www.digikey.com/en/products/detail/melexis-technologies-nv/MLX90316KDC-BDG-100-RE/2242692">Link</a> <br> <a class="glightbox" href="../Hall%20Effect%202.jpg" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="Hall2" src="../Hall%20Effect%202.jpg" /></a></td>
+<td><ul><li>Tri Axis Measurement</li><li>Uses I2C Communication</li></ul></td>
+<td><ul><li>4.5-5.5V Operating Voltage</li><li>Library for Arduino</li><li>Much more expensive</li></ul></td>
+</tr>
+<tr>
+<td>AS5048B <a href="https://www.digikey.com/en/products/detail/ams-osram-usa-inc/AS5048B-HTSP-500/3188616">Link</a> <br> <a class="glightbox" href="../Hall%20Effect%203.jpg" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="Hall3" src="../Hall%20Effect%203.jpg" /></a></td>
+<td><ul><li>0.05 Degree Measurement</li><li>Uses I2C Communication</li><li>3.3V Operating Voltage</li></ul></td>
+<td><ul><li>Few Extra Pins</li><li>No Library</li><li>Much more expensive</li></ul></td>
 </tr>
 </tbody>
 </table>
