deploy: 87a606dc94b8e98afdee5b566dd9c158e8aab0ce

--- a/Component_Selection/index.html
+++ b/Component_Selection/index.html
@@ -623,7 +623,7 @@
 </tbody>
 </table>
 <h3 id="selected-component">Selected Component</h3>
-<p><strong>Choice:</strong> Option 1: AS5600
+<p><strong>Choice:</strong> Option 1: AS5600<br>
 <strong>Rationale:</strong> The reason for choosing this Hall Effect sensor is due to the familiarity of use. In addition, as we are just using it as a way to measure motor rotational speed we do not need one as accurate or expensive in favor of a less accurate cheaper option. The lack of a usable library means more digging into the data sheet for needed information but the Arduino libraries can help with example code.</p>
 <h2 id="simple-needed-components">Simple Needed Components</h2>
 <table>
@@ -640,7 +640,7 @@
 </tr>
 <tr>
 <td>Capacitor</td>
-<td><ul><li>100nF <a href="https://www.digikey.com/en/products/detail/yageo/CC0805KRX7R9BB104/302874">Link</a><li><ul></td>
+<td><ul><li>100nF <a href="https://www.digikey.com/en/products/detail/yageo/CC0805KRX7R9BB104/302874">Link</a></li><ul></td>
 </tr>
 <tr>
 <td>Diode</td>
@@ -655,7 +655,7 @@
 <td><ul><li>3.3V <a href="https://www.digikey.com/en/products/detail/onsemi/LM2575D2T-3-3R4G/1476688">Link</a></li><ul></td>
 </tr>
 <tr>
-<td>Simple AC Motor<br> <strong><em>Non-Driven, position measured</em></strong></td>
+<td>Simple AC Motor<br> <strong><em>Non-Driven, position measured by sensor</em></strong></td>
 <td><a href="https://www.digikey.com/en/products/detail/sparkfun-electronics/ROB-11696/6163657?gclsrc=aw.ds&amp;&amp;utm_adgroup=&amp;utm_source=google&amp;utm_medium=cpc&amp;utm_campaign=PMax%20Shopping_Product_Low%20ROAS%20Categories&amp;utm_term=&amp;utm_content=&amp;utm_id=go_cmp-20243063506_adg-_ad-__dev-c_ext-_prd-6163657_sig-CjwKCAiA2JG9BhAuEiwAH_zf3oq15u6VnL4cq87XFDrNdmTuq9TBOPO5mJv7fST6NklMeJz0bCmOzxoCzhsQAvD_BwE&amp;gad_source=1&amp;gclid=CjwKCAiA2JG9BhAuEiwAH_zf3oq15u6VnL4cq87XFDrNdmTuq9TBOPO5mJv7fST6NklMeJz0bCmOzxoCzhsQAvD_BwE&amp;gclsrc=aw.ds">Link</a></td>
 </tr>
 </tbody>
