deploy: ca8cb171c8dd7a157dc0e835f101232ded7ecdac

--- a/pic-table/index.html
+++ b/pic-table/index.html
@@ -563,19 +563,19 @@
 <td>UART</td>
 <td>1</td>
 <td>1</td>
-<td>11-18/21-28</td>
+<td>17-18/27-28</td>
 </tr>
 <tr>
 <td>SPI</td>
 <td>2</td>
 <td>0</td>
-<td>11-18/21-28</td>
+<td>14-15/22-23</td>
 </tr>
 <tr>
 <td>I2C</td>
 <td>2</td>
 <td>2</td>
-<td>11-18/21-28</td>
+<td>14-15/22-23</td>
 </tr>
 <tr>
 <td>PWM</td>
@@ -591,6 +591,7 @@
 </tr>
 </tbody>
 </table>
+<p><a class="glightbox" href="../SOIC28.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="MCC_Diagram" src="../SOIC28.png" /></a></p>
 
 
 
