deploy: 3d43c14b21c0620027cf6cceba2b02f9897f1cf5

--- a/pic-table/index.html
+++ b/pic-table/index.html
@@ -591,7 +591,8 @@
 </tr>
 </tbody>
 </table>
-<p><a class="glightbox" href="../SOIC28.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="MCC_Diagram" src="../SOIC28.png" /></a></p>
+<p><a class="glightbox" href="../SOIC28.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="MCC_Diagram" src="../SOIC28.png" /></a>
+<a class="glightbox" href="../MCCPins.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="MCC_PINS" src="../MCCPins.png" /></a></p>
 
 
 
