deploy: 3ded83577e8060613330e2d36adaa0500e0fa7d0

--- a/block-diagram/index.html
+++ b/block-diagram/index.html
@@ -473,7 +473,7 @@
 
   <h1>Block Diagram</h1>
 
-<p><a class="glightbox" href="../TylerW_BD.drawio.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="Block Diagram" src="../TylerW_BD.drawio.png" /></a></p>
+<p><a class="glightbox" href="../BlockDiagram.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="Block Diagram" src="../BlockDiagram.png" /></a></p>
 
 
 
