--- a/pic-table/index.html
+++ b/pic-table/index.html
@@ -497,7 +497,7 @@
 </tr>
 <tr>
 <td>Vendor link</td>
-<td><a href="[#](https://www.digikey.com/en/products/detail/microchip-technology/PIC18F26Q10-I-SO/9996528)">Digikey</a></td>
+<td><a href="https://www.digikey.com/en/products/detail/microchip-technology/PIC18F26Q10-I-SO/9996528">Digikey</a></td>
 </tr>
 <tr>
 <td>Example Code</td>
