deploy: 63b25971a616959b7a347aec28ed45cff8db69b2

--- a/Component_Selection/index.html
+++ b/Component_Selection/index.html
@@ -697,7 +697,7 @@
 </tr>
 <tr>
 <td>Capacitor</td>
-<td><ul><li>100nF <a href="https://www.digikey.com/en/products/detail/yageo/CC0805KRX7R9BB104/302874">Link</a></li><ul></td>
+<td><ul><li>100nF <a href="https://www.digikey.com/en/products/detail/yageo/CC0805KRX7R9BB104/302874">Link</a></li><li>100uF <a href="https://www.digikey.com/en/products/detail/murata-electronics/GRM31CD80J107MEA8K/13905021">Link</a></li><li>330uF <a href="https://www.digikey.com/en/products/detail/murata-electronics/GRM32ER60G337ME05L/6155746">Link</a></li><ul></td>
 </tr>
 <tr>
 <td>Diode</td>
