--- a/Schematic/index.html
+++ b/Schematic/index.html
@@ -530,6 +530,10 @@
 
 <h2 id="schematic">Schematic</h2>
 <p><a class="glightbox" href="../WhippleSchematic.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="Schematic" src="../WhippleSchematic.png" /></a></p>
+<ul>
+<li><a href="../WhippleScehmatic.zip">Schemtaic Folder</a></li>
+</ul>
+<p><a class="glightbox" href="../BillofMaterials.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="BOM" src="../BillofMaterials.png" /></a></p>
 
 
 
