deploy: af1f2e043eb2931909f14867eb79cd40971c9228

--- a/Component_Selection/index.html
+++ b/Component_Selection/index.html
@@ -712,6 +712,10 @@
 <td><ul><li>150mA <a href="https://www.digikey.com/en/products/detail/ams-osram-usa-inc/GT-JTLPS1-13-KKLN-25-1-150-R33/16820475">Link</a></li><ul></td>
 </tr>
 <tr>
+<td>Fuse</td>
+<td><ul><li>500mA Ih/ 1A It<a href="https://www.digikey.com/en/products/detail/bel-fuse-inc/0ZCG0050AF2C/4156100">Link</a></li><li>100mA Ih/ 250mA It<a href="https://www.digikey.com/en/products/detail/bel-fuse-inc/0ZCH0010FF2E/4156118">Link</a></li><ul></td>
+</tr>
+<tr>
 <td>Simple AC Motor<br> <strong><em>Non-Driven, position measured by sensor</em></strong></td>
 <td><a href="https://www.digikey.com/en/products/detail/sparkfun-electronics/ROB-11696/6163657?gclsrc=aw.ds&amp;&amp;utm_adgroup=&amp;utm_source=google&amp;utm_medium=cpc&amp;utm_campaign=PMax%20Shopping_Product_Low%20ROAS%20Categories&amp;utm_term=&amp;utm_content=&amp;utm_id=go_cmp-20243063506_adg-_ad-__dev-c_ext-_prd-6163657_sig-CjwKCAiA2JG9BhAuEiwAH_zf3oq15u6VnL4cq87XFDrNdmTuq9TBOPO5mJv7fST6NklMeJz0bCmOzxoCzhsQAvD_BwE&amp;gad_source=1&amp;gclid=CjwKCAiA2JG9BhAuEiwAH_zf3oq15u6VnL4cq87XFDrNdmTuq9TBOPO5mJv7fST6NklMeJz0bCmOzxoCzhsQAvD_BwE&amp;gclsrc=aw.ds">Link</a></td>
 </tr>
