deploy: b4eeefdf33940bb3d767209440dc4e08aaa84e64

--- a/Messages/index.html
+++ b/Messages/index.html
@@ -565,13 +565,47 @@
   <h1>Messages</h1>
 
 <h2 id="message-structure">Message Structure</h2>
-<p>| Bytes | Byte 1-7 | Byte 8 |
-| Message Type | UART | UART |
-| Variable Name | Motor Speed | Output Voltage |
-| Variable Type | int | int |
-| Min Value | 0 | 0 |
-| Max Value| 1000 | 3 |
-| Example | 500 | 2 |</p>
+<table>
+<thead>
+<tr>
+<th>Bytes</th>
+<th>Byte 1-7</th>
+<th>Byte 8</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Message Type</td>
+<td>UART</td>
+<td>UART</td>
+</tr>
+<tr>
+<td>Variable Name</td>
+<td>Motor Speed</td>
+<td>Output Voltage</td>
+</tr>
+<tr>
+<td>Variable Type</td>
+<td>int</td>
+<td>int</td>
+</tr>
+<tr>
+<td>Min Value</td>
+<td>0</td>
+<td>0</td>
+</tr>
+<tr>
+<td>Max Value</td>
+<td>1000</td>
+<td>3</td>
+</tr>
+<tr>
+<td>Example</td>
+<td>500</td>
+<td>2</td>
+</tr>
+</tbody>
+</table>
 
 
 
