--- a/Messages/index.html
+++ b/Messages/index.html
@@ -615,7 +615,8 @@
 <th>Byte 4</th>
 <th>Byte 3</th>
 <th>Byte 4</th>
-<th>Byte 5-x</th>
+<th>Byte 5</th>
+<th>Byte 6-x</th>
 <th>Byte x+1</th>
 <th>Byte x+2</th>
 </tr>
@@ -627,6 +628,7 @@
 <td>'Z'</td>
 <td>sender ID</td>
 <td>receiver ID</td>
+<td>Message ID</td>
 <td>Message contents</td>
 <td>'Y'</td>
 <td>'B'</td>
@@ -659,7 +661,7 @@
 <thead>
 <tr>
 <th>Bytes</th>
-<th>Byte 4</th>
+<th>Byte 5</th>
 </tr>
 </thead>
 <tbody>
