deploy: 9baa4cc4f5cba312cf888d01b13da621a95350f1

--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@ I am still in the process of adding my non 314 projects as that takes precedent<
       <div class="md-copyright">
   
     <div class="md-copyright__highlight">
-      Copyright &copy; 2024 team-name-here
+      Copyright &copy; 2025 Tyler Whipple
     </div>
   
   
