--- a/EGR 314 Team Project/index.html
+++ b/EGR 314 Team Project/index.html
@@ -601,7 +601,7 @@ The purpose of this board is to read the rotational velocity of the generator's 
       <div class="md-copyright">
   
     <div class="md-copyright__highlight">
-      Copyright &copy; 2024 team-name-here
+      Copyright &copy; 2025 Tyler Whipple
     </div>
   
   
