deploy: 1c43c8984c854838f4739985f6eaee1c309564fc

--- a/6 Degree of Freedom Arm/Component_Selection/index.html
+++ b/6 Degree of Freedom Arm/Component_Selection/index.html
@@ -827,7 +827,7 @@
 <h3 id="ms62">MS62</h3>
 <p>For the shoulder joints I learned they needed a much higher torque rated servo to handle the heavy wrist I put on the end of it. The addition 90 degrees of motion that they provide over the other 180 degree servos greatly increase the range of motion.</p>
 <h2 id="structure">Structure</h2>
-<p><a class="glightbox" href="ARM" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="arm" src="ARM" /></a>
+<p><a class="glightbox" href="../ARM.jpg" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="arm" src="../ARM.jpg" /></a>
 <a href="https://makerworld.com/en/models/1179355-6dof-robot-arm-modular-cheap-educational?from=search">Link</a></p>
 <h3 id="3d-model">3D model</h3>
 <p>The main model of the arm is a 3D model I found and made some minor adjustments to after running into a few major problems. The joint attachments were not very secure as they mainly relied on just one attachment to the center of the servo.</p>
