--- a/index.html
+++ b/index.html
@@ -540,8 +540,7 @@
   <h1>Welcome</h1>
 
 <h2 id="all-my-projects">All my Projects</h2>
-<p>This website has all my projects that I have done and am working on.<br>
-I am still in the process of adding my non 314 projects as that takes precedent</p>
+<p>This website has all my projects that I have done and am working on.<br></p>
 
 
 
