deploy: 3ca85acc76309ec683a1d171e47e2b671e005bbd

--- a/index.html
+++ b/index.html
@@ -541,6 +541,8 @@
 
 <h2 id="all-my-projects">All my Projects</h2>
 <p>This website has all my projects that I have done and am working on.<br></p>
+<p><a href="https://crypt1dking.github.io/6%20Degree%20of%20Freedom%20Arm/">6 Degree of Freedom Arm</a>
+<a href="https://crypt1dking.github.io/EGR%20314%20Team%20Project/">EGR314 Project</a></p>
 
 
 
