--- a/index.html
+++ b/index.html
@@ -540,8 +540,9 @@
   <h1>Welcome</h1>
 
 <h2 id="all-my-projects">All my Projects</h2>
-<p>This website has all my projects that I have done and am working on.<br></p>
-<p><a href="https://crypt1dking.github.io/6%20Degree%20of%20Freedom%20Arm/">6 Degree of Freedom Arm</a>
+<p>This website has all my projects that I have done.<br>
+Please select one of the project links to see details.</p>
+<p><a href="https://crypt1dking.github.io/6%20Degree%20of%20Freedom%20Arm/">6 Degree of Freedom Arm</a><br>
 <a href="https://crypt1dking.github.io/EGR%20314%20Team%20Project/">EGR314 Project</a></p>
 
 
