--- a/index.html
+++ b/index.html
@@ -611,7 +611,8 @@
 <p>This website has all my projects that I have done.<br>
 Please select one of the project links to see details.</p>
 <p><a href="https://crypt1dking.github.io/6%20Degree%20of%20Freedom%20Arm/">6 Degree of Freedom Arm</a><br>
-<a href="https://crypt1dking.github.io/EGR%20314%20Team%20Project/">EGR314 Project</a></p>
+<a href="https://crypt1dking.github.io/EGR%20314%20Team%20Project/">EGR314 Project</a><br>
+<a href="https://crypt1dking.github.io/EGR%20201%20Project/">EGR 201 Project</a><br></p>
 
 
 
